--- a/SoftwareC/Home/home.css
+++ b/SoftwareC/Home/home.css
@@ -3,11 +3,24 @@
     padding: 0px;
 }
 
+html, body {
+    height: 100%;
+}
+
 body {
     background-color: rgb(126, 126, 126);
     font-family: 'Nanum Gothic', sans-serif;
-    height: 100%;
+    /* footer 하단 고정 : flex 추가 */
+    display: flex; 
+    flex-direction: column;
+    /*text-align: center;*/
+    margin: 0;
 }
+
+section {
+    flex: 1;
+}
+/* footer 하단 고정 */
 
 nav.navbar {
     background-color: rgb(248, 248, 248);
@@ -25,7 +38,12 @@ nav.navbar {
     width: 165px; 
 }
 
-#nav_name > h2 {
+#nav_name > a {
+    text-decoration: none;
+    color: black;
+}
+
+#nav_name > a > h2 {
     padding: 5px 0 0 12px;
 }
 
@@ -62,54 +80,29 @@ i.fa-solid {
 }
 
 /* section */
-#section > h1 { 
+#section > h3 {
     color: rgb(248, 248, 248);
-    font-size: 27px;
-    text-align: center;
-    margin: 50px 0 40px 0;
-}
-
-#section > #join {
-    width: 285px;
-    margin: 0 auto;
-}
-
-#section > #join > h5 {
-    color: rgb(248, 248, 248);
-    font-size: 16px;
-}
-
-#section > #join > input {
-    margin: 3px 0 12px 0;
-    width: 285px;
-    height: 40px;
-    border-radius: 5px;
-    border-width: 1px;
-    padding-left: 5px;
+    font-weight: 900;
+    margin: 20px 0 0 20px;
 }
 
 /*footer*/
-#footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 117px; /* footer 길이 줄임 */
+#information {
+    background-color: rgb(248, 248, 248);
+    padding-top: 20px;
+    padding-bottom: 9px;
     text-align: center;
-    color: rgb(77, 77, 77);
 }
 
-#footer > #information {
-    background-color: rgb(248, 248, 248);
-    position: relative;
-    min-height: 100%;
-    width: 100%;
-    padding-top: 20px;
+#information > .information_inner {
+    padding-bottom: 9px;
+}
+
+#information > .information_inner > a {
+    text-decoration: none;
+    color: black;
 }
 
 i.fa-github {
     color: rgb(77, 77, 77);
-}
-
-#footer > #information > .information_inner {
-    margin-bottom: 10px;
 }
