--- a/SoftwareC/movie/movie.css
+++ b/SoftwareC/movie/movie.css
@@ -117,37 +117,33 @@ i.fa-solid {
 }
 
     /* section -> Rating */
-.star_rating {
-    display: flex;
-    flex-direction: row-reverse;
-    font-size: 2.25rem;
-    line-height: 2.5rem;
-    justify-content: space-around;
-    padding-right: 0.2em;
-    padding-top: 1em;
-    text-align: center;
-    width: 5em;
-}
-       
-.star_rating input {
-    display: none;
-}
-       
-.star_rating label {
-    /*-webkit-text-fill-color: transparent; /* Will override color (regardless of order) 
-    -webkit-text-stroke-width: 2.3px;*/
-    color:#ccc;
-    cursor: pointer;
-}
-       
-.star_rating :checked ~ label {
-    -webkit-text-fill-color: gold;
-}
-       
-/*.star_rating label:hover,
-.star_rating label:hover ~ label {
-    -webkit-text-fill-color: rgb(248, 248, 248);
-}*/
+    #star_rating {
+        margin-top: 40px;
+    }
+
+    .star {
+        position: relative;
+        font-size: 2rem;
+        color: #ddd;
+      }
+      
+      .star input {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        left: 0;
+        opacity: 0;
+        cursor: pointer;
+      }
+      
+      .star span {
+        width: 0;
+        position: absolute; 
+        left: 0;
+        color: gold;
+        overflow: hidden;
+        pointer-events: none;
+      }
 
     /* 보고싶어요, 보는 중, 영화 촬영지 정보 */
 #movie_user_want {
