--- a/SoftwareC/Home/home.css
+++ b/SoftwareC/Home/home.css
@@ -86,6 +86,46 @@ i.fa-solid {
     margin: 20px 0 0 20px;
 }
 
+#section_main_div {
+    display: flex;
+    width: 98%;
+    overflow-x: hidden;
+    overflow-y: auto;
+    white-space: nowrap;
+    flex-wrap: wrap;
+    padding-bottom: 20px;
+}
+
+#new_pTag {
+    color: rgb(248, 248, 248);
+    display: flex;
+    flex-direction:column;
+    margin: 20px 0 0 20px;
+}
+
+#new_pTag > #movie_rank {
+    font-size: 20px;
+    font-weight: 700;
+    margin-bottom: 5px;
+}
+
+#new_pTag > #movie_title {
+    font-size: 15px;
+    width: 164px;
+    text-overflow:ellipsis;
+    white-space:nowrap;
+    word-wrap:normal;
+    overflow:hidden;
+    margin-top: 5px;
+}
+
+#new_pTag > img {
+    background-color: rgb(248, 248, 248);
+    width: 164px;
+    height: 251px;
+    border-radius: 5px;
+}
+
 /*footer*/
 #information {
     background-color: rgb(248, 248, 248);
