--- a/SoftwareC/movie/movie.css
+++ b/SoftwareC/movie/movie.css
@@ -145,6 +145,20 @@ i.fa-solid {
         pointer-events: none;
       }
 
+      #star_btn {
+        background-color: rgb(248, 248, 248);
+        border-color: rgb(248, 248, 248);
+        color: rgb(77, 77, 77);
+        border-radius: 5px;
+        font-family: 'Nanum Gothic', sans-serif;
+        font-size: 15px;
+        font-weight: 500;
+        text-align: center;
+        width: 68px;
+        height: 25px;
+        cursor: pointer;
+      }
+
     /* 보고싶어요, 보는 중, 영화 촬영지 정보 */
 #movie_user_want {
     display: flex;
