--- a/SoftwareC/Home/mypage.css
+++ b/SoftwareC/Home/mypage.css
@@ -1,3 +1,9 @@
+:root {
+    --color-body: #FBF8F1;
+    --color-nav: #F7ECDE;
+    --font-color: rgb(33, 33, 33);
+}
+
 * {
     margin: 0px;
     padding: 0px;
@@ -8,7 +14,7 @@ html, body {
 }
 
 body {
-    background-color: rgb(126, 126, 126);
+    background-color: var(--color-body);
     font-family: 'Nanum Gothic', sans-serif;
     /* footer 하단 고정 : flex 추가 */
     display: flex; 
@@ -22,7 +28,7 @@ section {
 /* footer 하단 고정 */
 
 nav.navbar {
-    background-color: rgb(248, 248, 248);
+    background-color: var(--color-nav);
     width: 100%;
     height: 73px;
     display: flex;
@@ -53,7 +59,7 @@ nav.navbar {
 
 #nav_name > a {
     text-decoration: none;
-    color: black;
+    color: var(--font-color);
 }
 
 #nav_name > a > h2 {
@@ -73,13 +79,13 @@ i.fa-solid {
 #login_bar > a {
     margin: 10px;
     text-decoration: none;
-    color: black;
+    color: var(--font-color);
 }
 
 /* section */
 /* section -> | 마이페이지 */
 #section > #section_name > div {
-    background-color: rgb(248, 248, 248);
+    background-color: var(--font-color);
     width: 5px;
     height: 32px;
 }
@@ -90,14 +96,14 @@ i.fa-solid {
 }
 
 #section > #section_name > h3 {
-    color: rgb(248, 248, 248);
+    color: var(--font-color);
     font-weight: 900;
     padding: 5px 0 5px 10px;
 }
 
 /* section -> " > 보고싶은 영화 " 틀 + 아이콘 사이즈, margin 조정*/
 #section > div.mypage_movie {
-    color: rgb(248, 248, 248);
+    color: var(--font-color);
     margin: 20px 0 0 20px;
     display: flex;
     height: 22px;
@@ -161,7 +167,7 @@ i.fa-pen {
 #mypage_comment > div.mypage_review {
     min-width: 243px;
     min-height: 121px;
-    background-color: rgb(248, 248, 248);
+    background-color: #e9dac152;
     padding: 10px;
     margin-bottom: 5px;
     font-size: 14px;
@@ -182,10 +188,11 @@ i.fa-pen {
 }
 
 #mypage_want > div {
-    background-color: rgb(248, 248, 248); /* test */
+    background-color: #e9dac152; /* test */
     min-width: 124px;
     min-height: 184px;
     margin: 10px 10px 0 0;
+    cursor: pointer;
 }
 
 /* section -> 보는 중 영화 담을 박스*/
@@ -196,15 +203,16 @@ i.fa-pen {
 }
 
 #mypage_watching > div {
-    background-color: rgb(248, 248, 248); /* test */
+    background-color: #e9dac152; /* test */
     min-width: 124px;
     min-height: 184px;
     margin: 10px 10px 0 0;
+    cursor: pointer;
 }
 
 /*footer*/
 #information {
-    background-color: rgb(248, 248, 248);
+    background-color: var(--color-nav);
     padding-top: 20px;
     padding-bottom: 9px;
     text-align: center;
@@ -216,7 +224,7 @@ i.fa-pen {
 
 #information > .information_inner > a {
     text-decoration: none;
-    color: black;
+    color: var(--font-color);
 }
 
 i.fa-github {
