--- a/SoftwareC/login/login.css
+++ b/SoftwareC/login/login.css
@@ -1,3 +1,9 @@
+:root {
+    --color-body: #FBF8F1;
+    --color-nav: #F7ECDE;
+    --font-color: rgb(33, 33, 33);
+}
+
 * {
     margin: 0px;
     padding: 0px;
@@ -8,7 +14,7 @@ html, body {
 }
 
 body {
-    background-color: rgb(126, 126, 126);
+    background-color: var(--color-body);
     font-family: 'Nanum Gothic', sans-serif;
     /* footer 하단 고정 : flex 추가 */
     display: flex; 
@@ -22,7 +28,7 @@ section {
 /* footer 하단 고정 */
 
 nav.navbar {
-    background-color: rgb(248, 248, 248);
+    background-color: var(--color-nav);
     width: 100%;
     height: 73px;
     display: flex;
@@ -39,7 +45,7 @@ nav.navbar {
 
 #nav_name > a {
     text-decoration: none;
-    color: black;
+    color: var(--font-color);
 }
 
 #nav_name > a > h2 {
@@ -49,6 +55,7 @@ nav.navbar {
 i.fa-solid { /* font-size 수정 */
     font-size: 35px;
     padding-top: 2px;
+    color: var(--font-color);
 }
 
 /* navbar -> search */
@@ -75,12 +82,12 @@ i.fa-solid { /* font-size 수정 */
 #login_bar > a {
     margin: 10px;
     text-decoration: none;
-    color: black;
+    color: var(--font-color);
 }
 
 /* section */
 #section > h1 { 
-    color: rgb(248, 248, 248);
+    color: var(--font-color);
     font-size: 30px;
     text-align: center;
     margin: 100px 0 40px 0;
@@ -105,6 +112,7 @@ i.fa-solid { /* font-size 수정 */
     padding-left: 10px;
     border-radius: 5px;
     border-width: 1px;
+    border: 1px solid  var(--font-color);
 }
 
 #password {
@@ -116,7 +124,7 @@ i.fa-solid { /* font-size 수정 */
 }
 
 .fa-user, .fa-key {
-    color: rgb(248, 248, 248);
+    color: var(--font-color);
     margin-right: 30px;
     margin: 0 10px 0 0;
     line-height: 35px;
@@ -136,11 +144,12 @@ i.fa-solid { /* font-size 수정 */
 }
 
 #login_low > div > label {
-    color: rgb(248, 248, 248);
-    font-weight: 600;
+    color: var(--font-color);
+    font-size: 15px;
+    font-weight: 530;
     cursor: pointer;
     padding-bottom: 5px;
-    padding: 1px 0 0 3px;
+    padding: 1px 0 0 5px;
 }
 
 #login_low > div {
@@ -153,13 +162,13 @@ i.fa-solid { /* font-size 수정 */
 }
 
 #login_btn {
-    background-color: rgb(248, 248, 248);
-    border-color: rgb(248, 248, 248);
-    color: rgb(77, 77, 77);
+    background-color: #f9efe3b7;
+    border-color: rgba(248, 248, 248, 0.508);
+    color: var(--color-color);
     border-radius: 5px;
     font-family: 'Nanum Gothic', sans-serif;
-    font-size: 15px;
-    font-weight: 500;
+    font-size: 14px;
+    font-weight: 550;
     text-align: center;
     width: 68px;
     height: 25px;
@@ -168,7 +177,7 @@ i.fa-solid { /* font-size 수정 */
 
 /*footer*/
 #information {
-    background-color: rgb(248, 248, 248);
+    background-color: var(--color-nav);
     padding-top: 20px;
     padding-bottom: 9px;
     text-align: center;
@@ -180,7 +189,7 @@ i.fa-solid { /* font-size 수정 */
 
 #information > .information_inner > a {
     text-decoration: none;
-    color: black;
+    color: var(--font-color);
 }
 
 i.fa-github {
