--- a/SoftwareC/search/search.css
+++ b/SoftwareC/search/search.css
@@ -19,13 +19,23 @@ body {
     /* footer 하단 고정 : flex 추가 */
     display: flex; 
     flex-direction: column;
+    /*text-align: center;*/
     margin: 0;
+    padding-top: 73px;
 }
 
 section {
     flex: 1;
 }
 /* footer 하단 고정 */
+
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
+}
 
 nav.navbar {
     background-color: var(--color-nav);
@@ -51,6 +61,7 @@ nav.navbar {
 #nav_name > a > h2 {
     padding: 5px 0 0 12px;
 }
+
 i.fa-solid { 
     font-size: 35px;
     padding-top: 2px;
@@ -72,7 +83,7 @@ i.fa-solid {
 }
 
 /* navbar -> login_bar */
-#login_bar { 
+#login_bar {
     display: flex;
     margin-right: 12px;
 }
@@ -84,44 +95,56 @@ i.fa-solid {
 }
 
 /* section */
-#section > h1 { 
+#section > h3 {
     color: var(--font-color);
-    font-size: 27px;
-    text-align: center;
-    margin: 50px 0 40px 0;
+    font-weight: 900;
+    margin: 20px 0 0 20px;
 }
 
-#section > #join {
-    width: 285px;
-    margin: 0 auto;
-}
-
-#section > #join h5 {
+a {
+    text-decoration: none;
     color: var(--font-color);
-    font-size: 14px;
 }
 
-#section > #join > #joinForm > input {
-    margin: 3px 0 12px 0;
-    width: 285px;
-    height: 40px;
+#search_result {
+    display: flex;
+    width: 98%;
+    overflow-x: hidden;
+    overflow-y: auto;
+    white-space: nowrap;
+    flex-wrap: wrap;
+    padding-bottom: 20px;
+}
+
+div.search_result_movie {
+    color: var(--font-color);
+    display: flex;
+    flex-direction:column;
+    margin: 20px 0 0 20px;
+    width: 165px;
+}
+
+.movie_img {
+    width: 164px;
+    height: 251px;
+    background-color: var(--color-nav);
     border-radius: 5px;
-    border-width: 1px;
-    padding-left: 5px;
 }
 
-#join_btn {
-    background-color: #f9efe3b7;
-    border-color: rgba(248, 248, 248, 0.508);
-    color: var(--font-color);
-    border-radius: 5px;
-    font-family: 'Nanum Gothic', sans-serif;
-    font-size: 14px;
-    font-weight: 550;
-    text-align: center;
-    width: 70px;
-    height: 25px;
-    cursor: pointer;
+div.search_result_movie > p.movie_title {
+    font-size: 16px;
+    font-weight: 600;
+    width: 164px;
+    text-overflow:ellipsis;
+    white-space:nowrap;
+    word-wrap:normal;
+    overflow:hidden;
+    margin-top: 5px;
+}
+
+div.movie_open_nation {
+    font-size: 13px;
+    margin-top: 1%;
 }
 
 /*footer*/
@@ -138,14 +161,9 @@ i.fa-solid {
 
 #information > .information_inner > a {
     text-decoration: none;
-    color: black;
+    color: var(--font-color);
 }
 
 i.fa-github {
     color: rgb(77, 77, 77);
-}
-
-#star{
-    color: red;
-    display: inline;
 }
